# tray

./: .gitignore  CMakeLists.txt  tray.cpp
example/: example.c  example_pp.cpp
include/tray/: tray.h  tray_raw.h
include/tray/platform/: linux.h  macos.h  platform_enum.h  tray_impl.h  windows.h
locales/: es.po  ru.po  tray.pot
src/: raw_tray.c  tray.cpp
